Prevent horizontal scrolling from overflow

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
+* {
+    box-sizing: border-box;
+  }
+
 body {
     margin: 0;
     font-family: 'Oxanium';
+    overflow-x: hidden; /* Prevent horizontal scrolling from overflow */
 }
 
 .header {
@@ -16,6 +21,11 @@ body {
 
 .header h1 {
     font-size: 24px;
+}
+
+.header a {
+    text-decoration: none;
+    color: #F9FAF8;
 }
 
 nav ul {
